# anu_experiments_acoustic_species

./: .gitmodules  README.md  coral_egci.csv  coral_egci.ipynb  google_method.py  knowledge_discovery.ipynb  lamda.ipynb  main.py  muha_methods.ipynb  pyproject.toml  split_audio.sh
autoencoding/: autocodec.ipynb  autocodec.onnx  autocodec_quantized_weights.onnx  autoencoder_paola.ipynb  buowset_extractor.py  dataset.py  models.py  muha_embeddings.ipynb
egci_spectrograms_clustering/: coloredNoises_512.csv  coral_egci.csv  coral_egci.ipynb  google_requirements.txt  muha_data.csv  utils.py
music/: banding.ipynb
perch_testing/: coralreef_test.csv  get_paola.ipynb  paola.csv  perch_regression.ipynb  surfperch.ipynb  surfperch_results.csv
pipeline/: models.py  output.csv  output.html  pipeline.ipynb  pipeline_viz.ipynb  utils.py
sound_sep/: sound_sep_muha.ipynb
tomls/: pyproject.toml
wandb/: latest-run
wandb/run-20250703_095722-oz7q1eqy/: run-oz7q1eqy.wandb
wandb/run-20250703_095722-oz7q1eqy/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250703_100740-m8brzk3j/files/: wandb-metadata.json
wandb/run-20250703_101613-cerdzac5/: run-cerdzac5.wandb
wandb/run-20250703_101613-cerdzac5/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250703_101824-f6lxscmk/: run-f6lxscmk.wandb
wandb/run-20250703_101824-f6lxscmk/files/: requirements.txt  wandb-metadata.json
wandb/run-20250703_141117-oy1u9p9t/: run-oy1u9p9t.wandb
wandb/run-20250703_141117-oy1u9p9t/files/: wandb-metadata.json
working_dir/checkpoint-3/: rng_state.pth  scheduler.pt  trainer_state.json
