[project]
name = "acoustic_knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audiomentations>=0.40.0",
    "datasets[audio]>=3.5.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "playsound3>=3.2.4",
    "pyrootutils>=1.0.4",
    "soundfile>=0.13.1",
    "timm>=1.0.15",
    "torchmetrics>=1.7.1",
    "wandb>=0.19.10",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "perch>=0.0.9",
    "lap",
    "numpy<2.0",
    "pyha-analyzer",
    "scikit-image>=0.25.2",
    "tensorflow-hub>=0.16.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
]

lap = { git = "https://github.com/gatagat/lap.git" }

[tool.uv.sources]
pyha-analyzer = { git = "https://github.com/UCSD-E4E/pyha-analyzer-2.0.git" }
