[project]
name = "acoustic-knowledge-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "torchcodec>=0.5",
    "tqdm>=4.67.1",
    "datasets<4.0.0",
    "bioacoustics-model-zoo>=0.12.0",
    "statsmodels>=0.14.5",
    "pyha-analyzer",
    "lap",
    "midi2audio>=0.1.1",
    "piano-transcription-inference>=0.0.6",
    "onnx>=1.18.0",
    "onnxscript>=0.3.2",
    "plotly>=6.3.0",
    "torchaudio>=2.8.0",
    "umap-learn>=0.5.9.post2",
]

[tool.uv.sources]
pyha-analyzer = { git = "https://github.com/UCSD-E4E/pyha-analyzer-2.0" }
lap = { git = "https://github.com/gatagat/lap" }
